monitoring/grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
        - image: grafana/grafana:7.2.0
          name: grafana-core
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: grafana
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
          volumeMounts:
            - name: grafana-persistent-storage
              mountPath: /var/libgrafana
      volumes:
        - name: grafana-persistent-storage
          persistentVolumeClaim:
            claimName: grafana-data-pvc
  selector:
    matchLabels:
      app: grafana
      component: core
