monitoring/kube-state-metrics-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
        - name: kube-state-metrics
          image: zqdlove/kube-state-metrics:v1.0.1
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: kube-state-metrics
