monitoring/grafana-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-webui
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.yinsheng.studio`)
      kind: Rule
      services:
        - name: grafana
          #          passHostHeader: false
          port: 3000
      middlewares:
        - name: redirect-https
          namespace: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-webui-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.yinsheng.studio`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: myresolver
