monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-webui
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.yinsheng.studio`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
      middlewares:
        - name: redirect-https
          namespace: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-webui-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.yinsheng.studio`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
  tls:
    certResolver: myresolver
